# open-reservation

./: README.md  clean-code.sh  prepare-release.sh  pyproject.toml
openreservation/: manage.py  pytest.ini  requirements.txt
openreservation/info/: admin.py  models.py  urls.py  views.py
openreservation/info/templates/info/: about.html  help.html  home.html
openreservation/info/tests/: test_info.py
openreservation/offsprings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
openreservation/offsprings/migrations/: 0001_initial.py
openreservation/openreservation/: asgi.py  settings.py  urls.py  wsgi.py
openreservation/parents/: admin.py  forms.py  models.py  urls.py  views.py
openreservation/parents/migrations/: 0001_initial.py  0002_auto_20200710_1839.py
openreservation/schedules/: admin.py  models.py  urls.py  views.py
openreservation/schedules/migrations/: 0001_initial.py
openreservation/static/: staticfiles.json
openreservation/static/assets/: package-lock.json  package.json
openreservation/templates/: base.html  layout.html
openreservation/templates/account/: logged_out.html  login.html
openreservation/templates/admin/: base_site.html
openreservation/templates/offsprings/: assignment.html  offspring_confirm_delete.html  offspring_form.html  offspring_list.html  offspring_update_form.html
openreservation/templates/parents/: profile.html  user_confirm_delete.html  user_delete_success.html
openreservation/templates/partials/: base_alerts.html  base_masthead.html
openreservation/templates/schedules/: index.html
static/: staticfiles.json
(+5 files in other folders)
